# Janus-1

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Janus_1_Complete_Analysis.ipynb  LICENSE  Makefile  PERFORMANCE.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  RESEARCH.md  ROADMAP.md  SECURITY.md  UPGRADE_LOG.md  VALIDATION.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: CI_CD_STATUS.md  CODE_OF_CONDUCT.md  EXAMPLES.md  PROJECT_STATUS.md  README.md  TESTING.md
examples/: 01_basic_simulation.py  02_kv_cache_analysis.py  03_advanced_optimization.py  04_thermal_modeling.py  README.md
examples/advanced/: 01_custom_workload.py
scripts/: README.md  reproduce_paper.sh  run_quick_test.sh  run_tests.sh  run_validation.bat  run_validation.sh  setup_dev.sh  setup_dev_env.sh
src/: __init__.py  __version__.py
src/analysis/: __init__.py  sensitivity_analysis.py  statistical_analysis.py
src/benchmarks/: __init__.py  trace_generator.py
src/models/: __init__.py  kv_cache_sizing.py  memory_power_model.py  sram_area_model.py  thermal_analysis.py
src/simulator/: __init__.py  janus_sim.py
tests/: __init__.py  conftest.py  test_benchmarks.py  test_integration.py  test_memory_hierarchy.py  test_models.py  test_simulator.py  test_statistical_analysis.py  test_trace_generator.py
